--- a/task 1/styles.css
+++ b/task 1/styles.css
@@ -6,15 +6,12 @@
     width: 640px;
     margin: auto;
     border: 1px solid #000;
-
 }
 
 body {
     font-family: Verdana, sans-serif;
     font-size: 0.9em;
     margin: 0px;
-
-
 }
 
 header, footer {
@@ -43,6 +40,7 @@ nav ul li {
     display: inline;
     margin: 5px;
 }
+
 button.accordion {
     background-color: #fff;
     color: #444;
@@ -86,36 +84,41 @@ div.panel.show {
     max-height: 500px;
 }
 
-
 .row::after {
     content: "";
     clear: both;
     display: table;
 }
+
 [class*="col-"] {
     float: left;
     padding: 15px;
 }
+
 html {
     font-family: "Lucida Sans", sans-serif;
 }
+
 .header {
     background-color: #9933cc;
     color: #ffffff;
     padding: 15px;
 }
+
 .menu ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
+
 .menu li {
     padding: 8px;
     margin-bottom: 7px;
     background-color: #33b5e5;
     color: #ffffff;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
+
 .menu li:hover {
     background-color: #0099cc;
 }
