--- a/task2-4/styles2.css
+++ b/task2-4/styles2.css
@@ -29,7 +29,7 @@ section {
 article {
     margin: 5px;
     padding: 10px;
-    background-color: white;
+    background-color: lightgrey;
 }
 
 nav {
@@ -37,10 +37,16 @@ nav {
     display: inline;
 }
 
+
 /*nav ul li {
     /*display: inline;*/
-    /*margin: 5px;*/
+
+
+/*margin: 5px;*/
+
+
 /*}*/
+
 ul.topnav {
     list-style-type: none;
     margin: 0;
@@ -49,7 +55,9 @@ ul.topnav {
     background-color: #888;
 }
 
-ul.topnav li {float: left;}
+ul.topnav li {
+    float: left;
+}
 
 ul.topnav li a {
     display: block;
@@ -58,6 +66,7 @@ ul.topnav li a {
     padding: 14px 16px;
     text-decoration: none;
 }
+
 ul.botnav {
     list-style-type: none;
     margin: 0;
@@ -66,7 +75,9 @@ ul.botnav {
     background-color: #888;
 }
 
-ul.botnav li {float: left;}
+ul.botnav li {
+    float: left;
+}
 
 ul.botnav li a {
     display: block;
@@ -119,36 +130,41 @@ div.panel.show {
     max-height: 500px;
 }
 
-
 .row::after {
     content: "";
     clear: both;
     display: table;
 }
+
 [class*="col-"] {
     float: left;
     padding: 15px;
 }
+
 html {
     font-family: "Lucida Sans", sans-serif;
 }
+
 .header {
     background-color: #9933cc;
     color: #ffffff;
     padding: 15px;
 }
+
 .menu ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
+
 .menu li {
     padding: 8px;
     margin-bottom: 7px;
     background-color: #2277cc;
     color: #ffffff;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
+
 .menu li:hover {
     background-color: #0099cc;
 }
@@ -162,11 +178,12 @@ html {
 }
 
 
-
 /* Set default size for minimum 640px min whatever */
+
 [class*="col-"] {
     width: 640px;
 }
+
 @media only screen and (min-width: 641px) {
     /* For > 640px upto 980 screen: */
     .container {
@@ -174,19 +191,44 @@ html {
         margin: 0px;
         border: 1px solid #000;
     }
-    .col-m-1 {width: 8.33%;}
-    .col-m-2 {width: 16.66%;}
-    .col-m-3 {width: 25%;}
-    .col-m-4 {width: 33.33%;}
-    .col-m-5 {width: 41.66%;}
-    .col-m-6 {width: 50%;}
-    .col-m-7 {width: 58.33%;}
-    .col-m-8 {width: 66.66%;}
-    .col-m-9 {width: 75%;}
-    .col-m-10 {width: 83.33%;}
-    .col-m-11 {width: 91.66%;}
-    .col-m-12 {width: 100%;}
+    .col-m-1 {
+        width: 8.33%;
+    }
+    .col-m-2 {
+        width: 16.66%;
+    }
+    .col-m-3 {
+        width: 25%;
+    }
+    .col-m-4 {
+        width: 33.33%;
+    }
+    .col-m-5 {
+        width: 41.66%;
+    }
+    .col-m-6 {
+        width: 50%;
+    }
+    .col-m-7 {
+        width: 58.33%;
+    }
+    .col-m-8 {
+        width: 66.66%;
+    }
+    .col-m-9 {
+        width: 75%;
+    }
+    .col-m-10 {
+        width: 83.33%;
+    }
+    .col-m-11 {
+        width: 91.66%;
+    }
+    .col-m-12 {
+        width: 100%;
+    }
 }
+
 @media only screen and (min-width: 980px) {
     /* For desktop above 980: */
     .container {
@@ -194,16 +236,40 @@ html {
         margin: 0px;
         border: 1px solid #000;
     }
-    .col-1 {width: 8.33%;}
-    .col-2 {width: 16.66%;}
-    .col-3 {width: 25%;}
-    .col-4 {width: 33.33%;}
-    .col-5 {width: 41.66%;}
-    .col-6 {width: 50%;}
-    .col-7 {width: 58.33%;}
-    .col-8 {width: 66.66%;}
-    .col-9 {width: 75%;}
-    .col-10 {width: 83.33%;}
-    .col-11 {width: 91.66%;}
-    .col-12 {width: 100%;}
+    .col-1 {
+        width: 8.33%;
+    }
+    .col-2 {
+        width: 16.66%;
+    }
+    .col-3 {
+        width: 25%;
+    }
+    .col-4 {
+        width: 33.33%;
+    }
+    .col-5 {
+        width: 41.66%;
+    }
+    .col-6 {
+        width: 50%;
+    }
+    .col-7 {
+        width: 58.33%;
+    }
+    .col-8 {
+        width: 66.66%;
+    }
+    .col-9 {
+        width: 75%;
+    }
+    .col-10 {
+        width: 83.33%;
+    }
+    .col-11 {
+        width: 91.66%;
+    }
+    .col-12 {
+        width: 100%;
+    }
 }
